[tool.poetry]
name = "e-commerce"
version = "0.1.0"
description = ""
authors = ["Arvind-4 <lordarvindthegamer@gmail.com>"]
readme = "README.md"
packages = [{include = "e_commerce"}]

[tool.poetry.dependencies]
python = "^3.9"
Django = "3.2"
djangorestframework = "3.12"
django-countries = "7.2.1"
Pillow = "^9.3.0"
psycopg2-binary = "^2.9.5"
whitenoise = "5.3.0"
django-cockroachdb = "3.2"
django-cors-headers = "^3.13.0"
python-decouple = "^3.6"


[tool.poetry.group.dev.dependencies]
gunicorn = "^20.1.0"
uvicorn = "^0.20.0"
requests = "^2.28.1"
notebook = "^6.5.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
